--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="./index.html" class="logo"><span class="logo-first-part">Web</span>Studio</a>
                 <ul class="navigation-list">
                     <li class="navigation-item">
-                        <a href="./index.html" class="link-nav-item">Студия</a>
+                        <a href="./index.html" class="link-nav-item active">Студия</a>
                     </li>
                     <li class="navigation-item">
                         <a href="./portfolio.html" class="link-nav-item">Портфолио</a>
@@ -55,7 +55,7 @@
         <section class="hero-section">
             <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="button">Заказать услугу</button>
+                <button type="button" class="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         
@@ -115,9 +115,18 @@
 
                 <!--images what we do-->
                 <ul class="what-we-do-list">
-                    <li class="what-we-do-item"><img src="./images/device1.jpg" alt="device1" width="370"></li>
-                    <li class="what-we-do-item"><img src="./images/device2.jpg" alt="device2" width="370"></li>
-                    <li class="what-we-do-item"><img src="./images/device3.jpg" alt="device3" width="370"></li>
+                    <li class="what-we-do-item">
+                        <img src="./images/device1.jpg" alt="device1" width="370">
+                        <p class="after-title-what-we-do">Десктопные приложения</p>
+                    </li>
+                    <li class="what-we-do-item">
+                        <img src="./images/device2.jpg" alt="device2" width="370">
+                        <p class="after-title-what-we-do">Мобильные приложения</p>
+                    </li>
+                    <li class="what-we-do-item">
+                        <img src="./images/device3.jpg" alt="device3" width="370">
+                        <p class="after-title-what-we-do">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -374,5 +383,15 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close" data-modal-close>
+                <svg class="modal-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
