--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                         <a href="./index.html" class="link-nav-item">Студия</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="./portfolio.html" class="link-nav-portfolio-item">Портфолио</a>
+                        <a href="./portfolio.html" class="link-nav-item active">Портфолио</a>
                     </li>
                     <li class="navigation-item">
                         <a href="#" class="link-nav-item">Контакты</a>
@@ -59,102 +59,155 @@
                     <li class="portfolio-buttons-item"><button type="button" class="portfolio-button">Маркетинг</button></li>
                 </ul>
                 <ul class="portfolio-list">
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/tehnokrack.jpg" 
-                            alt="Веб-сайт Технокряк"
-                            width="370"
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/tehnokrack.jpg" 
+                                alt="Веб-сайт Технокряк"
+                                width="370"
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Технокряк</h2>
-                            <p class="portfolio-list-text">Веб-сайт</p>
+                                <h2 class="portfolio-list-title">Технокряк</h2>
+                                <p class="portfolio-list-text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                        <img src="./images/poster.jpg" 
-                            alt="Постер New Orlean vs Golden Star" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/poster.jpg" 
+                                alt="Постер New Orlean vs Golden Star" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="portfolio-list-text">Дизайн</p>
+                                <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="portfolio-list-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/restaurantseafood.jpg" 
-                            alt="Ресторан Seafood" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/restaurantseafood.jpg" 
+                                alt="Ресторан Seafood" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Ресторан Seafood</h2>
-                            <p class="portfolio-list-text">Приложение</p>
+                                <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+                                <p class="portfolio-list-text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/headset.jpg" 
-                            alt="Проект Prime" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/headset.jpg" 
+                                alt="Проект Prime" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Проект Prime</h2>
-                            <p class="portfolio-list-text">Маркетинг</p>
+                                <h2 class="portfolio-list-title">Проект Prime</h2>
+                                <p class="portfolio-list-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/projectboxes.jpg" 
-                            alt="Проект Boxes" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/projectboxes.jpg" 
+                                alt="Проект Boxes" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Проект Boxes</h2>
-                            <p class="portfolio-list-text">Приложение</p>
+                                <h2 class="portfolio-list-title">Проект Boxes</h2>
+                                <p class="portfolio-list-text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/inspirationhasnoborders.jpg" 
-                            alt="Веб-сайт Inspiration has no Borders" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/inspirationhasnoborders.jpg" 
+                                alt="Веб-сайт Inspiration has no Borders" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
-                            <p class="portfolio-list-text">Веб-сайт</p>
+                                <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+                                <p class="portfolio-list-text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/limitededition.jpg" 
-                            alt="Издание Limited Edition" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/limitededition.jpg" 
+                                alt="Издание Limited Edition" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Издание Limited Edition</h2>
-                            <p class="portfolio-list-text">Дизайн</p>
+                                <h2 class="portfolio-list-title">Издание Limited Edition</h2>
+                                <p class="portfolio-list-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/projectLAB.jpg" 
-                            alt="Проект LAB" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/projectLAB.jpg" 
+                                alt="Проект LAB" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Проект LAB</h2>
-                            <p class="portfolio-list-text">Маркетинг</p>
+                                <h2 class="portfolio-list-title">Проект LAB</h2>
+                                <p class="portfolio-list-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-item"><a href="#" class="portfolio-link">
-                            <img src="./images/growingbuisness.jpg" 
-                            alt="Приложение Growing Business" 
-                            width="370" 
-                            height="294">
+                    <li class="portfolio-item">
+                        <a href="#" class="portfolio-link">
+                            <div class="portfolio-item-wrap">
+                                <img src="./images/growingbuisness.jpg" 
+                                alt="Приложение Growing Business" 
+                                width="370" 
+                                height="294">
+                                <p class="portfolio-top-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="text-container">
-                            <h2 class="portfolio-list-title">Growing Business</h2>
-                            <p class="portfolio-list-text">Приложение</p>
+                                <h2 class="portfolio-list-title">Growing Business</h2>
+                                <p class="portfolio-list-text">Приложение</p>
                             </div>
                         </a>
                     </li>
